--- a/public/css/login/css/login.css
+++ b/public/css/login/css/login.css
@@ -55,7 +55,7 @@ input[type="password"] {
     width: 85%;
     color: white;
     font-size: 16px;
-    background: #1D448E;
+    background: #fb5849;
     padding: 14px 20px;
     border-radius: 5px;
     cursor: pointer;
