--- a/public/css/manage_post/post/css/franquicia_show.css
+++ b/public/css/manage_post/post/css/franquicia_show.css
@@ -35,16 +35,16 @@
 .content-post .post-author span {
     margin-top: 12px;
     margin-left: 10px;
-    color: #1d448e;
+    color: #fb5849;
 }
 
 .content-post .post-author span>a{
-    color: #1d448e;
+    color: #fb5849;
 }
 
 .content-post .post-author span>a:hover{
     text-decoration: underline !important;
-    color: #1d448e;
+    color: #fb5849;
 }
 
 .content-post .post-image {
