--- a/public/css/base/css/templatemo-klassy-cafe.css
+++ b/public/css/base/css/templatemo-klassy-cafe.css
@@ -657,7 +657,7 @@ banner
 }
 
 #top .left-content {
-  background-image: url('../img/top-left-bg.jpg');
+  background-image: url('../../../img/top-left-bg.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
