--- a/public/css/manage_post/comments/css/comments.css
+++ b/public/css/manage_post/comments/css/comments.css
@@ -22,7 +22,7 @@ form{
 
 .form-content .form-general.comments {
     display: flex;
-    width: 47%;
+    width: auto;
     flex-direction: column;
     margin-bottom: 4%;
 }
@@ -31,12 +31,13 @@ form{
 .form-content .form-general .form-group{
     margin-top: 40px;
     margin-bottom: -20px;
-    width: 88%;
+    width: auto;
 }
 
 .form-content .form-general .form-group #description {
     display: block;
-    min-width: 100%;
+    width: 200px;
+    min-width: 250px;
     min-height: 120px;
     padding: 20px;
     resize: none;
@@ -50,12 +51,12 @@ form{
 .form-content .form-general .btn-submit {
     display: flex;
     padding: 10px;
-    width: 25%;
+    width: auto;
     cursor: pointer;
     font-size: 1.2em !important;
     justify-content: center;
     color: #FFF;
-    background: #031b4e;
+    background: #fb5849;
     margin-left: 63% !important;
     margin-top: 20px;
     margin-bottom: 30px;
