--- a/public/css/user/css/style_user.css
+++ b/public/css/user/css/style_user.css
@@ -143,7 +143,7 @@ margin-bottom: 20px;
 }
 
 .btn-back{
-background: #1d448e;
+background: #fb5849;
 width: 30%;
 border-radius: 2px;
 text-align: center;
@@ -257,7 +257,7 @@ margin-bottom: 5px;
     width: 65%;
     flex-direction: column;
     margin: 1% 0%;
-    color: #1d448e !important;
+    color: #fb5849 !important;
     font-size: 1.2em;
     font-weight: 500;
 }
@@ -276,7 +276,7 @@ margin-bottom: 5px;
     padding: 12px;
     border-radius: 2px;
     margin-top: 10px;
-    background-color: #1d448e;
+    background-color: #fb5849;
     color: white;
 }
 
@@ -297,7 +297,7 @@ margin-bottom: 5px;
     padding: 5px;
     color: white;
     border-radius: 4px;
-    background-color: #007bff;
+    background-color: #fb5849;
     margin-right: 6px;
 }
 
